--- a/iDataConfig.json
+++ b/iDataConfig.json
@@ -1,340 +1,56 @@
 {
     "name": "The Myst",
     "world": {
-        "fixed": {
-        },
-        "settings": {
-            "days": 5,        
-            "statValues": {},
-            "numVillages": 5,
-            "maxVillagersPerVillage": 99,
-            "startingVillagers": ["Farmer", "Farmer", "Lumberjack"],
-            "maxBuildingsPerVillage": 10
-        },
-        "simValues":{
-            "curTick": 1
-        }
     },
-    "villages": [{
-            "fixed": {
-                "name": "Default",
-                "type": "village"
-            },
-            "settings": {
-                "priorities": {
-                    "FoodProduction": 1,
-                    "WoodProduction": 1,
-                    "StoneProduction": 1,
-                    "OreProduction": 1,
-                    "Commerce": 1,
-                    "War": 1,
-                    "Research": 1,
-                    "Searching": 1
-                }
-            },
-            "simValues":{
-                "villagers": [],
-                "locations": [],
-                "size": 1,
-                "resources": {
-                    "Food": 0,
-                    "Wood": 0,
-                    "Stone": 0,
-                    "Ore": 0,
-                    "Money": 0,
-                    "Research": 0
-                }
-        }        
-    }],
+    "villages": {
+    },
     "villagers":{
         "Farmer": {
-            "fixed": {
-                "type": "Farmer",
                 "enhancemntFactor": 2
-            },
-            "settings": {
-                "speed": 3,
-                "maxHealth": 50,
-                "carryCapacity": 5,
-                "attack": 3,
-                "defense": 3,
-                "productionSpeed": 3,
-                "spawnTime": 2,
-                "enhancemntCost": 300,
-                "spawnCost": {
-                    "Food": 50,
-                    "wood": 100
-                }
-            },
-            "simValues":{
-                "level": 1,
-                "health": 50,
-                "resourcePayload":{
-                    "type": "Food",
-                    "amount": 0
-                },
-                "status": "toVillage",
-                "distance": 3
-            }
         },
         "Lumberjack": {
-            "fixed": {
-                "type": "Lumberjack",
                 "enhancemntFactor": 2              
-            },
-            "settings": {
-                "speed": 3,
-                "maxHealth": 50,
-                "carryCapacity": 5,
-                "attack": 3,
-                "defense": 3,
-                "productionSpeed": 3,
-                "spawnTime": 2,
-                "enhancemntCost": 300,
-                "spawnCost": {
-                    "Food": 50
-                }
-            },
-            "simValues":{
-                "level": 1,
-                "health": 50,
-                "resourcePayload":{
-                    "type": "Food",
-                    "amount": 0
-                },
-                "status": "toVillage",
-                "distance": 3
-            }
         },
         "Stonemason": {
-            "fixed": {
-                "type": "Stonemason",
-                "enhancemntFactor": 2              
-            },
-            "settings": {
-                "speed": 3,
-                "maxHealth": 50,
-                "carryCapacity": 5,
-                "attack": 3,
-                "defense": 3,
-                "productionSpeed": 3,
-                "spawnTime": 2,
-                "enhancemntCost": 300,
-                "spawnCost": {
-                    "Food": 50
-                }
-            },
-            "simValues":{
-                "level": 1,
-                "health": 50,
-                "resourcePayload":{
-                    "type": "Food",
-                    "amount": 0
-                },
-                "status": "toVillage",
-                "distance": 3
-            }
+                "enhancemntFactor": 2
         },
         "Miner": {
-            "fixed": {
-                "type": "Miner" ,
-                "enhancemntFactor": 2             
-            },
-            "settings": {
-                "speed": 3,
-                "maxHealth": 50,
-                "carryCapacity": 5,
-                "attack": 3,
-                "defense": 3,
-                "productionSpeed": 3,
-                "spawnTime": 2,
-                "enhancemntCost": 300,
-                "spawnCost": {
-                    "Food": 50
-                }
-            },
-            "simValues":{
-                "level": 1,
-                "health": 50,
-                "resourcePayload":{
-                    "type": "Food",
-                    "amount": 0
-                },
-                "status": "toVillage",
-                "distance": 3
-            }
+                "enhancemntFactor": 2
         },
         "Hunter": {
-            "fixed": {
-                "type": "Hunter",
-                "enhancemntFactor": 2              
-            },
-            "settings": {
-                "speed": 3,
-                "maxHealth": 50,
-                "carryCapacity": 5,
-                "attack": 3,
-                "defense": 3,
-                "productionSpeed": 3,
-                "spawnTime": 2,
-                "enhancemntCost": 300,
-                "spawnCost": {
-                    "Food": 50
-                }
-            },
-            "simValues":{
-                "level": 1,
-                "health": 50,
-                "resourcePayload":{
-                    "type": "Food",
-                    "amount": 0
-                },
-                "status": "toVillage",
-                "distance": 3
-            }
+                "enhancemntFactor": 2
         },
         "Warrior": {
-            "fixed": {
-                "type": "Warrior",
-                "enhancemntFactor": 2              
-            },
-            "settings": {
-                "speed": 3,
-                "maxHealth": 50,
-                "carryCapacity": 5,
-                "attack": 3,
-                "defense": 3,
-                "productionSpeed": 3,
-                "spawnTime": 2,
-                "enhancemntCost": 300,
-                "spawnCost": {
-                    "Food": 50
-                }
-            },
-            "simValues":{
-                "level": 1,
-                "health": 50,
-                "resourcePayload":{
-                    "type": "Food",
-                    "amount": 0
-                },
-                "status": "toVillage",
-                "distance": 3
-            }
+                "enhancemntFactor": 2
         },
         "Merchant": {
-            "fixed": {
-                "type": "Merchant",
-                "enhancemntFactor": 2              
-            },
-            "settings": {
-                "speed": 3,
-                "maxHealth": 50,
-                "carryCapacity": 5,
-                "attack": 3,
-                "defense": 3,
-                "productionSpeed": 3,
-                "spawnTime": 2,
-                "enhancemntCost": 300,
-                "spawnCost": {
-                    "Food": 50
-                }
-            },
-            "simValues":{
-                "level": 1,
-                "health": 50,
-                "resourcePayload":{
-                    "type": "Food",
-                    "amount": 0
-                },
-                "status": "toVillage",
-                "distance": 3
-            }
+                "enhancemntFactor": 2
         }
     },
     "locations": {
         "Grassland": {
-            "fixed": {
-                "type": "Grassland",
                 "buildingTypes": [ "Farm", "HuntingHut" ],
                 "maxBuildings": 3,
                 "enhancemntFactor": 2
-            },
-            "settings":{
-                "numPerVillage": 3,
-                "aveDistance": 1,
-                "enhancemntCost": 300
-            },
-            "simValues":{ 
-                "level": 1,               
-                "distance": 3,
-                "buildings": []
-            }
         },
         "Forest": {
-            "fixed": {
-                "type": "Forest",
                 "buildingTypes": [ "LoggingCamp", "HuntingHut" ],
                 "maxBuildings": 3,
                 "enhancemntFactor": 2
-            },
-            "settings":{
-                "numPerVillage": 3,
-                "aveDistance": 1,
-                "enhancemntCost": 300
-            },
-            "simValues":{ 
-                "level": 1,               
-                "distance": 3,
-                "buildings": []
-            }
         },
         "StoneDeposit": {
-            "fixed": {
-                "type": "StoneDeposit",
                 "buildingTypes": [ "Quarry" ],
                 "maxBuildings": 3,
                 "enhancemntFactor": 2
-            },
-            "settings":{
-                "numPerVillage": 3,
-                "aveDistance": 1,
-                "enhancemntCost": 300
-            },
-            "simValues":{ 
-                "level": 1,               
-                "distance": 3,
-                "buildings": []
-            }
         },
         "OreDeposit": {
-            "fixed": {
-                "type": "OreDeposit",
                 "buildingTypes": [ "Mine" ],
                 "maxBuildings": 3,
                 "enhancemntFactor": 2
-            },
-            "settings":{
-                "numPerVillage": 3,
-                "aveDistance": 1,
-                "enhancemntCost": 300
-            },
-            "simValues":{ 
-                "level": 1,               
-                "distance": 3,
-                "buildings": []
-            }
         }
     },
     "buildings": {
         "LoggingCamp":{
-            "settings": { 
-                "maxHealth": 100,
-                "buildTime": 24,
-                "resourceAmount": 2000,
-                "enhancemntCost": 300
-             },
-            "fixed": { 
                 "cost": {
                     "wood": 50,
                     "gold": 50
@@ -342,21 +58,8 @@
                 "villagersAbleToSupport": 5,
                 "resource": "wood",
                 "enhancemntFactor": 2
-            },
-            "simValues": {
-                "percentBuilt": 0,
-                "currentHealth": 100, 
-                "level": 1             
-            }
         },
         "Mine":{
-            "settings": {
-                "maxHealth": 100,
-                "buildTime": 24,
-                "resourceAmount": 2000,
-                "enhancemntCost": 300
-             },
-            "fixed": { 
                 "cost": {
                     "wood": 50,
                     "gold": 50
@@ -364,23 +67,8 @@
                 "villagersAbleToSupport": 5,
                 "resource": "Ore",
                 "enhancemntFactor": 2
-            },
-            "simValues": {
-                "percentBuilt": 0,
-                "currentHealth": 100, 
-                "level": 1             
-            }
-      
         },
         "Quarry":{
-            "settings": { 
-                "maxHealth": 100,
-                "buildTime": 24,
-                "resourceAmount": 2000,
-                "enhancemntCost": 300
-
-             },
-            "fixed": { 
                 "cost": {
                     "wood": 50,
                     "gold": 50
@@ -388,21 +76,8 @@
                 "villagersAbleToSupport": 5,
                 "resource": "stone",
                 "enhancemntFactor": 2
-            },
-            "simValues": {
-                "percentBuilt": 0,
-                "currentHealth": 100, 
-                "level": 1             
-            }
         },
         "Farm":{
-            "settings": { 
-                "maxHealth": 100,
-                "buildTime": 24,
-                "resourceAmount": 2000,
-                "enhancemntCost": 300
-             },
-            "fixed": { 
                 "cost": {
                     "wood": 50,
                     "gold": 50
@@ -410,21 +85,8 @@
                 "villagersAbleToSupport": 5,
                 "resource": "food",
                 "enhancemntFactor": 2
-            },
-            "simValues": {
-                "percentBuilt": 0,
-                "currentHealth": 100, 
-                "level": 1             
-            }
         },
         "HuntersHut":{
-            "settings": { 
-                "maxHealth": 100,
-                "buildTime": 24,
-                "resourceAmount": 2000,
-                "enhancemntCost": 300
-             },
-            "fixed": { 
                 "cost": {
                     "wood": 50,
                     "gold": 50
@@ -432,21 +94,8 @@
                 "villagersAbleToSupport": 5,
                 "resource": "food",
                 "enhancemntFactor": 2
-            },
-            "simValues": {
-                "percentBuilt": 0,
-                "currentHealth": 100, 
-                "level": 1             
-            } 
         },
         "Market":{
-            "settings": { 
-                "maxHealth": 100,
-                "buildTime": 24,
-                "resourceAmount": 2000,
-                "enhancemntCost": 300
-             },
-            "fixed": { 
                 "cost": {
                     "wood": 50,
                     "gold": 50
@@ -454,21 +103,8 @@
                 "villagersAbleToSupport": 5,
                 "resource": "gold",
                 "enhancemntFactor": 2
-            },
-            "simValues": {
-                "percentBuilt": 0,
-                "currentHealth": 100, 
-                "level": 1             
-            }
         },  
         "Library":{
-            "settings": { 
-                "maxHealth": 100,
-                "buildTime": 24,
-                "resourceAmount": 2000,
-                "enhancemntCost": 300
-             },
-            "fixed": { 
                 "cost": {
                     "wood": 50,
                     "gold": 50
@@ -476,21 +112,8 @@
                 "villagersAbleToSupport": 5,
                 "resource": "research",
                 "enhancemntFactor": 2
-            },
-            "simValues": {
-                "percentBuilt": 0,
-                "currentHealth": 100, 
-                "level": 1             
-            }
         }, 
         "Barracks":{
-            "settings": { 
-                "maxHealth": 100,
-                "buildTime": 24,
-                "resourceAmount": 2000,
-                "enhancemntCost": 300
-             },
-            "fixed": { 
                 "cost": {
                     "wood": 50,
                     "gold": 50
@@ -498,21 +121,8 @@
                 "villagersAbleToSupport": 5,
                 "resource": "Warrior",
                 "enhancemntFactor": 2
-            },
-            "simValues": {
-                "percentBuilt": 0,
-                "currentHealth": 100, 
-                "level": 1             
-            }   
         },
         "Townhall":{
-            "settings": { 
-                "maxHealth": 100,
-                "buildTime": 24,
-                "resourceAmount": 2000,
-                "enhancemntCost": 300
-             },
-            "fixed": { 
                 "cost": {
                     "wood": 50,
                     "gold": 50
@@ -520,12 +130,6 @@
                 "villagersAbleToSupport": 5,
                 "resource": "villager",
                 "enhancemntFactor": 2
-            },
-            "simValues": {
-                "percentBuilt": 0,
-                "currentHealth": 100, 
-                "level": 1             
-            }
         }
     }
 }
